fix(classloading,gc): a class-path modular jar is unnamed, and the parallel G1 evacuator gets the serial arm's header screens
Two Tomcat known-issues pages, both root-caused to something other than what
they said.

1. `TestWebappClassLoaderMemoryLeak` / `...ExecutorMemoryLeak`. The CCL half
   of BUG-TC0622 was already fixed and MEASURED working (the Azure log shows
   `clearReferencesStopTimerThread` being entered, which needs the CCL gate to
   pass). What was still red is a second defect behind it: a modular jar
   reached through the CLASS path was labelled with the module its
   `module-info.class` declares, so `--add-opens java.base/java.util=ALL-UNNAMED`
   — qualified to the unnamed module — could not reach it and `setAccessible`
   threw. HotSpot puts a class-path jar's classes in the unnamed module.

   `ModuleRegistry::named_module_for_package` is `module_for_package` minus any
   `is_class_path_only` module, and the class-define site uses it
   (`CRATONVM_CLASSPATH_JAR_UNNAMED_MODULE`, default on). The descriptor stays
   registered (service discovery and labelling want it) and `--module-path`
   modules keep their names. `ClassManager::new` and
   `ModuleRegistry::service_providers` already made this argument in these
   words; class MEMBERSHIP was the surface still reading the raw map.

   This is also why one host reproduced it 1/1 and the other 0/1 on the same
   commit: the Linux classpath is jars, the Windows one exploded directories.
   A/B on one host with the jar-first classpath: both classes FAIL -> PASS.

2. The G1 evacuation crash clusters. `SharedEvac::process_object` and
   `seed_source_region` gated a candidate on region membership and nothing
   else, and the parallel driver's root seed had no object-start guard --
   while their serial twins have screened candidates since 2026-08-26 and
   refused non-object roots since 2026-09-02. Parallel evacuation is the
   DEFAULT arm, so the hardening never reached the code that runs. An interior
 